Fix: keep navbar visible during loading

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1582,6 +1582,7 @@ nav {
     background: var(--secondary-blue);
     pointer-events: all;
     flex-direction: column;
+    margin-top: 64px;
 
     .loading-background {
         position: absolute;
